添加文档、脚本和配置文件
- 更新 .gitignore，忽略临时文件和图片目录
- 添加项目文档（.md 和 .docx 文件）
- 添加 PowerShell 脚本文件
- 添加 Git 配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,25 @@ packages/
 D:\ScreenshotV3.0\
 C:\ScreenshotV3.0\
 
+# Office 临时文件
+~$*.docx
+~$*.doc
+~$*.xlsx
+~$*.xls
+~$*.pptx
+~$*.ppt
+
+# 图片目录
+image/
+
+# Cursor IDE 配置
+.cursorignore
+
+# 本地配置和脚本（可选，根据需要取消注释）
+# run.ps1
+# *.ps1
+
+# 文档文件（可选，根据需要取消注释）
+# *.md
+# *.docx
 
